--- a/bookshop/static/templates/account/forms/user_login_form.html
+++ b/bookshop/static/templates/account/forms/user_login_form.html
@@ -2,30 +2,37 @@
 <section id="get-started" class="col-lg-12 get-started section text-center mb-5 mt-5">
     <div class="col-lg-3 container contact">
      <form method="post" class="php-email-form text-center">
-                  {% csrf_token %}
-                  <h3>Sign In</h3>
-                  <div class="row gy-3">
-                    <div class="col-12">
-                     {{ form.username }}
-                    </div>
-                    <div class="col-12">
-                        {{ form.password }}
-                    </div>
-                    <div class="col-12 text-center">
-                        <div class="error-message">{{ form.errors }}</div>
-                        <div class="mb-3 mt-3">
-                            <div class="text-center">
-                                <a href="{% url 'account:registration' %}">
-                                Create an account</a>
-                            </div>
-                            <div class="text-center ">
-                                <a href="{% url 'account:reset_password' %}">Forgotten Password?</a>
-                            </div>
+          {% csrf_token %}
+          <h3>Sign In</h3>
+          <div class="row gy-3">
+            <div class="col-12">
+             {{ form.username }}
+            </div>
+            <div class="col-12">
+                {{ form.password }}
+            </div>
+            <div class="col-12 text-center">
+                <div>
+                    {% if form.non_field_errors %}
+                        <div class="errorlist">
+                            {% for error in form.non_field_errors %}
+                                {{ error }}
+                            {% endfor %}
                         </div>
-
-                      <button type="submit">Sign In</button>
+                    {% endif %}
+                </div>
+                <div class="mb-3 mt-3">
+                    <div class="text-center">
+                        <a href="{% url 'account:registration' %}">
+                        Create an account</a>
                     </div>
-                  </div>
+                    <div class="text-center ">
+                        <a href="{% url 'account:reset_password' %}">Forgot Password?</a>
+                    </div>
+                </div>
+              <button type="submit">Sign In</button>
+            </div>
+          </div>
      </form>
     </div>
 </section>
