templates: edit the name of the block in user_login and user_registration

--- a/bookshop/static/templates/account/user/user_login.html
+++ b/bookshop/static/templates/account/user/user_login.html
@@ -2,20 +2,21 @@
 
 {% block title %}Sign In{% endblock %}
 
-{% block  user_login%}
-<main class="main">
-  <!-- Page Title -->
-    <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);">
-      <div class="container position-relative">
-        <h1>Sign In</h1>
-        <nav class="breadcrumbs">
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Sign In</li>
-          </ol>
-        </nav>
+{% block  auth%}
+  <main class="main">
+    <!-- Page Title -->
+      <div class="page-title dark-background main-nav-bg">
+        <div class="container position-relative">
+          <h1>Sign In</h1>
+          <nav class="breadcrumbs">
+            <ol>
+              <li><a href="index.html">Home</a></li>
+              <li class="current">Sign In</li>
+            </ol>
+          </nav>
+        </div>
       </div>
-    </div><!-- End Page Title -->
-    {% include "account/forms/user_login_form.html" %}
-</main>
+    <!-- End Page Title -->
+      {% include "account/forms/user_login_form.html" %}
+  </main>
 {% endblock %}
