--- a/bookshop/static/templates/account/user/user_registration.html
+++ b/bookshop/static/templates/account/user/user_registration.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% block title %}Sign Up{% endblock %}
 
-{% block  user_registration %}
+{% block  auth %}
   <main class="main">
     <!-- Page Title -->
-      <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);">
+      <div class="page-title dark-background main-nav-bg">
         <div class="container position-relative">
           <h1>Sign Up</h1>
           <nav class="breadcrumbs">
@@ -16,7 +16,6 @@
           </nav>
         </div>
       </div><!-- End Page Title -->
-
       <section id="get-started" class="col-lg-12 get-started section text-center mb-5 mt-5">
         <div class="col-lg-3 container contact">
           {% include "account/forms/user_registration_form.html" %}
