templates: edit dashboard (the order of the blocks) and add basket

--- a/bookshop/static/templates/account/user_orders/dashboard.html
+++ b/bookshop/static/templates/account/user_orders/dashboard.html
@@ -47,6 +47,52 @@
             </a>
           </div>
           <div class="col">
+             <a href="{% url 'basket:basket_summary' %}" class="text-reset text-decoration-none" role="button"
+              style="max-width: 540px;">
+            <div class="card mb-3">
+                <div class="row g-0">
+                  <div class="col-2 position-relative">
+                    <svg class="position-absolute top-50 start-50 translate-middle" xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-cart3"
+                      viewBox="0 0 16 16">
+                      <path
+                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                    </svg>
+                  </div>
+                  <div class="col-10">
+                    <div class="card-body ps-0 ps-md-1">
+                      <h1 class="h5">Your Basket</h1>
+                      <p class="card-text small text-muted">View your basket</p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </a>
+        </div>
+        <div class="col">
+            <a href="{% url 'account:wishlist' %}" class="text-reset text-decoration-none" role="button"
+              style="max-width: 540px;">
+              <div class="card mb-3">
+                <div class="row g-0">
+                  <div class="col-2 position-relative">
+                    <svg class="position-absolute top-50 start-50 translate-middle" xmlns="http://www.w3.org/2000/svg"
+                      width="30" height="30" fill="currentColor" class="bi bi-card-checklist" viewBox="0 0 16 16">
+                      <path
+                        d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z" />
+                      <path
+                        d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z" />
+                    </svg>
+                  </div>
+                  <div class="col-10">
+                    <div class="card-body ps-0 ps-md-1">
+                      <h1 class="h5">Your Wishlist</h1>
+                      <p class="card-text small text-muted">View your wishlist</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col">
             <a href="{% url 'account:user_edit' %}" class="text-reset text-decoration-none" role="button"
               style="max-width: 540px;">
               <div class="card mb-3">
@@ -92,31 +138,6 @@
               </div>
             </a>
           </div>
-          <div class="col">
-            <a href="{% url 'account:wishlist' %}" class="text-reset text-decoration-none" role="button"
-              style="max-width: 540px;">
-              <div class="card mb-3">
-                <div class="row g-0">
-                  <div class="col-2 position-relative">
-                    <svg class="position-absolute top-50 start-50 translate-middle" xmlns="http://www.w3.org/2000/svg"
-                      width="30" height="30" fill="currentColor" class="bi bi-card-checklist" viewBox="0 0 16 16">
-                      <path
-                        d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z" />
-                      <path
-                        d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z" />
-                    </svg>
-                  </div>
-                  <div class="col-10">
-                    <div class="card-body ps-0 ps-md-1">
-                      <h1 class="h5">Your Wishlist</h1>
-                      <p class="card-text small text-muted">View your wishlist</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-
         </div>
       </div>
   </main>
